@@ -90,17 +90,24 @@
                             </xsl:for-each>
                             <xsl:text>&#10;</xsl:text>
                             <xsl:element name="xsl:otherwise">
-                                <xsl:element name="xsl:apply-templates">
-                                    <xsl:attribute name="select">@*|node()</xsl:attribute>
-                                    <xsl:if test="$unconditional">
+                                <xsl:choose>
+                                    <xsl:when test="$unconditional">
                                         <xsl:for-each select="$unconditional">
                                             <xsl:variable name="themeid" select="@xml:id"/>
-                                            <xsl:attribute name="mode">
-                                                <xsl:value-of select="$themeid"/>
-                                            </xsl:attribute>
+                                            <xsl:element name="xsl:apply-templates">
+                                                <xsl:attribute name="select">.</xsl:attribute>
+                                                <xsl:attribute name="mode">
+                                                    <xsl:value-of select="$themeid"/>
+                                                </xsl:attribute>
+                                            </xsl:element>
                                         </xsl:for-each>
-                                    </xsl:if>
-                                </xsl:element>
+                                    </xsl:when>
+                                    <xsl:otherwise>
+                                        <xsl:element name="xsl:apply-templates">
+                                            <xsl:attribute name="select">@*|node()</xsl:attribute>
+                                        </xsl:element>
+                                    </xsl:otherwise>
+                                </xsl:choose>
                             </xsl:element>
                             <xsl:text>&#10;</xsl:text>
                         </xsl:element>
